# tozo

.github/workflows/: ci.yml
backend/: .gitignore  development.env  pyproject.toml  testing.env
backend/lib/: api_error.py
backend/src/backend/: run.py
backend/src/backend/blueprints/: control.py
backend/src/backend/lib/: api_error.py  email.py
backend/src/backend/templates/: email.html
backend/tests/: conftest.py  test_rate_limits.py  test_run.py
backend/tests/blueprints/: test_control.py
backend/tests/lib/: test_email.py
frontend/: package-lock.json  package.json
infrastructure/: .gitignore  ansible.cfg  secrets.auto.tfvars.vault  terraform.tfstate.vault
